# numcompute-stream

./: .gitignore  README.md  pyproject.toml
benchmark/: benchmark_stream.py
demo/: stream_demo.ipynb
numcompute_stream/: __init__.py  ensemble.py  io.py  metrics.py  pipeline.py  preprocessing.py  stats.py  stream.py  tree.py  utils.py  visualise.py
tests/: test_ensemble.py  test_io_visualise.py  test_metrics.py  test_pipeline.py  test_preprocessing.py  test_stats.py  test_tree.py
