[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "numcompute_stream"
version = "0.2.0"
description = "Streaming, decision-tree-based machine learning framework built on NumPy + matplotlib."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Shaun D'souza" }]
keywords = ["streaming", "machine-learning", "decision-tree", "random-forest", "numpy"]
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "nbformat>=5.0",
    "nbclient>=0.7",
    "ipykernel>=6.0",
]

[tool.setuptools]
packages = ["numcompute_stream"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
